# CodeGuard

./: .gitignore  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-push.yml  deploy.yml  scan-pr.yml  test.yml
app/: __init__.py  cli.py  main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  database.py  ingestion.py  llm.py  logging.py
app/models/: database.py  schemas.py
app/rag/: __init__.py  chunker.py  embeddings.py  vector_store.py
app/scanner/: __init__.py  scanner.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  qdrant.Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  NewScan.tsx  ScanDetail.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infra/: main.tf  outputs.tf  variables.tf
infra/modules/alb/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf
infra/modules/ecs/: main.tf  variables.tf
infra/modules/qdrant/: main.tf  outputs.tf  variables.tf
infra/modules/rds/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf
infra/modules/vpc/: main.tf  variables.tf
ollama/: Modelfile
scripts/: setup-docker.sh  setup-qdrant.sh
tests/: __init__.py
tests/fixtures/vulnerable-app/: README.md  app.py
tests/integration/: test_scanner.py
tests/unit/: test_chunker.py  test_embeddings.py
